syntax = "proto3";
package request;

option go_package = "github.com/hopeio/cherry/protobuf/request";
option java_package = "xyz.hoper.cherry.protobuf.request";
option java_multiple_files = true;

message Page{
  uint32 pageNo = 1;
  uint32 pageSize = 2;
}


message Id {
  uint64 id = 1;
}

message IdStr{
  string idStr = 1;
}

message Cursor{
  uint64 cursor = 1;
}

message CursorStr{
  string cursor = 1;
}